--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,16 +9,18 @@ Authors@R: c(
     person("Pierre", "Chausse", role = "rev"),
     person("Alex", "Stringer", role = "rev")
   )
-Description: Performs multiple empirical likelihood tests. It offers an 
-    easy-to-use interface and flexibility in specifying hypotheses and 
-    calibration methods, extending the framework to simultaneous inferences. 
-    The core computational routines are implemented using the 'Eigen' 'C++' 
-    library and 'RcppEigen' interface, with 'OpenMP' for parallel computation.
-    Details of the testing procedures are provided in Kim, MacEachern, and
-    Peruggia (2023) <doi:10.1080/10485252.2023.2206919>. A companion paper by 
-    Kim, MacEachern, and Peruggia (2024) <doi:10.18637/jss.v108.i05> is 
-    available for further information. This work was supported by the U.S. 
-    National Science Foundation under Grants No. SES-1921523 and DMS-2015552.
+Description: Performs multiple empirical likelihood tests. It offers an
+    easy-to-use interface and flexibility in specifying hypotheses and
+    calibration methods, extending the framework to simultaneous
+    inferences.  The core computational routines are implemented using the
+    'Eigen' 'C++' library and 'RcppEigen' interface, with 'OpenMP' for
+    parallel computation.  Details of the testing procedures are provided
+    in Kim, MacEachern, and Peruggia (2023)
+    <doi:10.1080/10485252.2023.2206919>. A companion paper by Kim,
+    MacEachern, and Peruggia (2024) <doi:10.18637/jss.v108.i05> is
+    available for further information. This work was supported by the U.S.
+    National Science Foundation under Grants No. SES-1921523 and
+    DMS-2015552.
 License: GPL (>= 2)
 URL: https://docs.ropensci.org/melt/, https://github.com/ropensci/melt
 BugReports: https://github.com/ropensci/melt/issues
@@ -32,10 +34,11 @@ Imports:
     utils
 Suggests: 
     covr,
+    dplyr,
     ggplot2,
     knitr,
+    MASS,
     microbenchmark,
-    R.rsp,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0),
@@ -46,8 +49,7 @@ LinkingTo:
     Rcpp,
     RcppEigen
 VignetteBuilder: 
-    knitr,
-    R.rsp
+    knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
