--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,10 @@ exportMethods(weights)
 importFrom(Rcpp,sourceCpp)
 importFrom(checkmate,assert_int)
 importFrom(checkmate,assert_logical)
+importFrom(checkmate,assert_matrix)
 importFrom(checkmate,assert_number)
+importFrom(checkmate,assert_numeric)
+importFrom(checkmate,test_numeric)
 importFrom(graphics,plot.default)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
