`validate_alpha()` removed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(checkmate,assert_logical)
 importFrom(checkmate,assert_matrix)
 importFrom(checkmate,assert_number)
 importFrom(checkmate,assert_numeric)
+importFrom(checkmate,assert_string)
 importFrom(checkmate,test_numeric)
 importFrom(graphics,plot.default)
 importFrom(graphics,points)
