--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,6 +46,6 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--ignore-vignettes", "--no-manual", "--as-cran")'
-          build_args: 'c("--no-build-vignettes", "--no-manual")'
+          # args: 'c("--ignore-vignettes", "--no-manual", "--as-cran")'
+          # build_args: 'c("--no-build-vignettes", "--no-manual")'
           upload-snapshots: true
