--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -31,6 +31,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: r-lib/actions/setup-tinytex@v2
+      - run: tlmgr --version
+
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
@@ -46,6 +49,7 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
+          args: 'c("-as-cran")'
           # args: 'c("--ignore-vignettes", "--no-manual", "--as-cran")'
           # build_args: 'c("--no-build-vignettes", "--no-manual")'
           upload-snapshots: true
