--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -32,13 +32,16 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-tinytex@v2
-      - run: tlmgr --version
+        env:
+          # Install full prebuilt version
+          TINYTEX_INSTALLER: TinyTeX
+      # - run: tlmgr --version
 
-      - name: Install additional LaTeX packages
-        run: |
-          tlmgr update --self
-          tlmgr install ae algorithm2e ifoddpage mathtools pgf relsize thumbpdf
-          tlmgr list --only-installed
+      # - name: Install additional LaTeX packages
+      #   run: |
+      #     tlmgr update --self
+      #     tlmgr install ae algorithm2e ifoddpage mathtools pgf relsize thumbpdf
+      #     tlmgr list --only-installed
 
       - uses: r-lib/actions/setup-pandoc@v2
 
