--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -32,16 +32,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-tinytex@v2
-        env:
-          # Install full prebuilt version
-          TINYTEX_INSTALLER: TinyTeX
-      # - run: tlmgr --version
+      - run: tlmgr --version
 
-      # - name: Install additional LaTeX packages
-      #   run: |
-      #     tlmgr update --self
-      #     tlmgr install ae algorithm2e ifoddpage mathtools pgf relsize thumbpdf
-      #     tlmgr list --only-installed
+      - name: Install additional LaTeX packages
+        run: |
+          tlmgr update --self
+          tlmgr install ae algorithm2e ifoddpage mathtools pgf relsize thumbpdf
+          tlmgr list --only-installed
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -58,7 +55,5 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("-as-cran")'
-          # args: 'c("--ignore-vignettes", "--no-manual", "--as-cran")'
-          # build_args: 'c("--no-build-vignettes", "--no-manual")'
+          args: 'c("--as-cran")'
           upload-snapshots: true
