--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -56,4 +56,5 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--as-cran")'
+          build_args: 'c("--compact-vignettes=gs+qpdf")'
           upload-snapshots: true
