checkmate package adoption + pdf vignette (#4)
* checkmate package adoption wip

* checkmate adoption wip + bug fix in confint() argument setting for `ELMT`

* `validate_alpha()` removed

* argument validation using checkmate implemented paritally

* new vignette wip

* rnw test

* tex action test

* tex action wip

* tex action wip

* tex action wip

* tex action wip

* tex action wip

* tex action wip

* tex action wip

* tex action wip

* tex action wip

* tex action wip

* tex action wip

* compact vignette

* tex action wip

* sec 4.2 rnw done

* add .cls file to rbuildignore

* new vignette article rnw from jss

* DESCRIPTION update

* DESCRIPTION update

* vignette entry add back

* bump to v1.11.1

---------

Co-authored-by: markean <markean@protonmail.com>

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,8 +5,6 @@
 ^README\.Rmd$
 ^LICENSE\.md$
 ^cran-comments\.md$
-^\.vscode$
-^\.VSCodeCounter$
 ^ignore$
 ^data-raw$
 ^CRAN-RELEASE$
@@ -19,3 +17,7 @@
 ^docs$
 ^pkgdown$
 ^revdep$
+^doc$
+^Meta$
+^vignettes/cache$
+^vignettes/figure$
